# systrkr

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile
data/: com.goldengod503.GalaxySysTrkr.desktop  com.system76.SysTrkr.desktop
docs/: ARCHITECTURE.md  release-ledger.md
docs/releases/: 2026-05-23_GS-02_sampler-analysis-followthrough.md  2026-05-23_GS-03_clippy-lint-cleanup.md
src/: app.rs  config.rs  history.rs  lib.rs  main.rs  popup.rs  settings.rs
src/sampler/: cpu.rs  mod.rs  net.rs
src/sampler/gpu/: amd.rs  intel.rs  mod.rs  none.rs  nvml.rs
src/sampler/gpu/procs/: fdinfo.rs  mod.rs  nvml.rs
src/widgets/: mod.rs  sparkline.rs
tests/fixtures/sysfs/intel/card0/device/: uevent
