[package]
name = "galaxy-systrkr"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Lightweight native COSMIC system stats applet"
repository = "https://github.com/goldengod503/galaxy-systrkr"

[features]
default = ["nvidia"]
nvidia = ["dep:nvml-wrapper"]

[dependencies]
sysinfo = "0.32"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nvml-wrapper = { version = "0.10", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "tokio", "wayland", "single-instance"]

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt"] }
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
